--- a/portfoliostyle.css
+++ b/portfoliostyle.css
@@ -35,7 +35,7 @@ body {
 
 .profile {
     margin-top: 10%;
-    background-color: black;
+    background-color: #181818;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -48,19 +48,21 @@ body {
 .profile>img {
     width: 40%;
     height: 40%;
-    border-radius: 50%;
+    border-radius: 0%;
 }
 
 .profile>span,
 b {
-    background-color: black;
+    background-color: transparent;
 }
 
 .contact {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    background-color: black;
+    background-color: transparent;
+    padding-bottom: 10%;
+    border-bottom: .2em solid rgb(29, 29, 29);
 }
 
 .contactlogo {
@@ -81,11 +83,11 @@ b {
 }
 
 .leftmenublock {
-    background-color: black;
+    background-color: #181818;
 }
 
 .leftsize {
-    background-color: black;
+    background-color: #181818;
     color: rgba(255, 255, 255, 0.541);
     font-size: .8em;
     text-align: start;
@@ -93,21 +95,22 @@ b {
 
 .rightsize {
     font-size: .8em;
-    background-color: black;
+    background-color: #181818;
     color: white;
 }
 
 .about {
-    background-color: black;
+    background-color: transparent;
     padding-bottom: 10%;
     padding-left: 15%;
     padding-right: 15%;
-    padding-top: 10%;
+    padding-top: 5%;
     /* border-bottom: 5px solid rgb(6, 62, 116); */
+    border-bottom: .2em solid rgb(29, 29, 29);
 }
 
 .aboutcontent {
-    background-color: black;
+    background-color: transparent;
     display: flex;
     justify-content: space-between;
     margin-top: 10%;
@@ -119,13 +122,14 @@ b {
     padding-right: 15%;
     padding-top: 5%;
     /* border-bottom: 5px solid rgb(6, 62, 116); */
+    border-bottom: .2em solid rgb(29, 29, 29);
 }
 
 .languages,
 .languages>div {
     font-size: 1em;
     font-weight: bold;
-    background-color: black;
+    background-color: transparent;
     color: whitesmoke;
 }
 
@@ -142,7 +146,7 @@ b {
 .sublanguages {
     font-size: .8em;
     font-weight: normal;
-    background-color: black;
+    background-color: transparent;
     margin-bottom: 5%;
     margin-top: 5%;
 }
@@ -159,13 +163,14 @@ b {
     padding-top: 5%;
     /* border-bottom: 5px solid rgb(6, 62, 116); */
     color: whitesmoke;
+    border-bottom: .2em solid rgb(29, 29, 29);
 }
 
 .skill,
 .skill>div {
     font-size: 1em;
     font-weight: bold;
-    background-color: black;
+    background-color: transparent;
 }
 
 .headskill {
