--- a/portfoliostyle.css
+++ b/portfoliostyle.css
@@ -298,7 +298,7 @@ b {
     background-color: rgb(29, 29, 29);
     padding-left: 5%;
     padding-top: 3%;
-    background-image: url(/v-kittiphak.github.io/portfoliopic/bg.png);
+    background-image: url(/portfoliopic/bg.png);
 }
 
 .firstmm>img {
